# epitaxial_growth

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.MD  golden_sample.txt  plot_grid.py  requirements.txt
app/: CMakeLists.txt  main.cpp
cmake/: CodeCoverage.cmake  PerformanceFlags.cmake  Sanitizer.cmake  Tools.cmake
hdr/: Atom.hpp  MCSystem.hpp  lib.hpp
materials/: golden_sample.txt  kmc_growth_2D.cpp  kompiluj.sh  kompiluj_debug.sh  serwer_225_info.txt
materials/crystal_growth_2d/: kmc_growth_2D.cpp  kompiluj.sh  tsp_skrypt
src/: CMakeLists.txt  lib.cpp  main.cpp
src/atom/: Atom.hpp  CMakeLists.txt
src/atom_diffused/: CMakeLists.txt  DiffusedAtom.cpp  DiffusedAtom.hpp
src/config/: ConfigCG.hpp  ConfigPhysics.hpp  ConfigSimulation.hpp
src/file/: CMakeLists.txt  FileHandler.cpp  FileHandler.hpp
src/linalg/: CGDriver.cpp  CGDriver.hpp  CMakeLists.txt  MathDriver.cpp  MathDriver.hpp  linalg.cpp  linalg.hpp
src/physics/: CMakeLists.txt  physics.cpp  physics.hpp
src/rng/: CMakeLists.txt  RngDriver.cpp  RngDriver.hpp  rng.cpp  rng.hpp
src/sim/: CMakeLists.txt  Simulator.cpp  Simulator.hpp  sim.cpp  sim.hpp
src/utils/: AtomContainers.hpp  AtomTypes.hpp  MatrixTypes.hpp
tests/: CMakeLists.txt  gtest_common_define.hpp  test_linalg.cpp  test_physics.cpp  test_rng.cpp  test_sim.cpp
tools/: run-clang-tidy.py
